--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<div class="jeff"></div>
 				<h3 class="orange xname">JEFF FRESHMAN</h3>
 			</div>
-			<div class="overbg5">dfgdfg</div>
+			<div class="overbg5"></div>
 		</div>
 	</div>
 </section>	
