--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!-- Section 2 -->
 <section class="section2">
 	<div class="container">
-		<div class="libre"> <img src="/images/hammer.svg" alt=""></div>
+		<div class="libre"> <img src="./images/hammer.svg" alt=""></div>
 		<div class="row">
 			<div class="col-sm x1">
 				<span class="triax"></span>
@@ -219,7 +219,7 @@
 <!-- Section 5 -->
 <section class="section5">
 	<div class="container">
-		<div class="libre2"><img src="/images/play.svg" alt=""></div>
+		<div class="libre2"><img src="./images/play.svg" alt=""></div>
 		<div class="row">
 			<div class="col-sm text">
 				<h6>VIEW TESTIMONIALS</h6>
