--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
 			<div class="col-sm">
 				<div class="jeff"></div>
 				<h3 class="orange xname">JEFF FRESHMAN</h3>
+				<div style="margin-left: 240px;">
+				<input type="radio" id="sbutton">
+				<input type="radio" id="sbutton">
+				<input type="radio" id="sbutton">
+				<input type="radio" id="sbutton">
+				<input type="radio" id="sbutton">
+			</div>
 			</div>
 			<div class="overbg5"></div>
 		</div>
