--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 			<div class="col-sm">
 				<div class="jeff"></div>
 				<h3 class="orange xname">JEFF FRESHMAN</h3>
-				<div class="puntos" style="margin-left: 41%;">
+				<div class="puntos">
 				<input type="radio" id="sbutton">
 				<input type="radio" id="sbutton">
 				<input type="radio" id="sbutton">
