--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			<div class="oxp">
 				<h4 class="orange fw-bold">WELCOME TO CONSTRUCTION COMPANY</h4>
 				<h1 class="title fw-bold">Why work with us?</h1>
-			<div style="margin: 30px;">	
+			<div class="elementoss">	
 				<h3 class="fw-bold">We are a company with highly quealified and responsible personnel who will perform the best jobs for your home.</h3>
 				<div class="boxcard">
 					<article class="">
