--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<button class="btn-custom">Our Value</button>
 				</div>
 				<p class="inf">We are an expert group in architectural design with a residential approach, where we generate creative, authentic and innovative solutions, achieving results that exceed the expectations of each client.</p>
-				<button class="btn-custom" style="background-color: #151e33; color: #ffffff; border-color: #151e33; margin: 30px 35%;">CONTACT US!</button>
+				<button class="btn-custom" style="background-color: #151e33; color: #ffffff; border-color: #151e33; margin:30px 0;">CONTACT US!</button>
 			</div>
 			<div class="col-sm x4">
 			<h6 class="orange fw-bold">SERVICES</h6>
@@ -240,13 +240,8 @@
 		</div>
 	</div>
 </section>	
-
-
-	
-	
-	
-<div class="container-xxl">
-
+	<!-- Section 6 -->
+<section class="container-xxl social">
         <div class="container main-text">
             <p>our Social media</p>
         </div>
@@ -293,18 +288,10 @@
             </div>
         </div>
 
-    </div>
-	
-
-
-	
-	
-	
-	
+    </section>
 <!--Footer-->
-
-  <footer Max-widht: 1600px>
-    <div class="container-lg contain">
+<footer>
+    <div class="container-xxl contain">
         <div class="row">
             <div class="col-sm">
                 <p class="fw-bolder fs-5 title"> Office contact</p>
@@ -405,7 +392,7 @@
 
                 <div class="mb-3">
                     <span class="fw-bolder text-light">></span>
-                    <p class="footer-text text-light">GAllery</p>
+                    <p class="footer-text text-light">Gallery</p>
                 </div>
 
                 <div class="mb-3">
@@ -423,10 +410,7 @@
         <p class="text-light">This Website Was Desined and Developed by <a href="#">josesilvera.com</a></p>
         <img class="img" src="images/Logo-JS-White-Wshadow.png" />
     </div>
-
-	
 </footer>
-
 <!-- Scripts -->
 <script type="text/javascript" src="./js/jquery/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="./js/bootstrap.min.js"></script>
